--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,14 @@
+textarea {
+  resize: none;
+}
+
 body {
   text-align: center;
   background-color: black;
 }
 
 h1 {
-  font-family: Sansita Swashed, serif;
+  font-family: "Staatliches", serif;
   color: rgb(255, 255, 255);
   background: rgb(2, 0, 36);
   background: linear-gradient(
@@ -15,10 +19,52 @@ h1 {
   );
 }
 p {
-  font-family: Smooch Sans, serif;
+  font-family: "Smooch Sans", serif;
   font-size: 200%;
   color: white;
 }
-img {
-  width: 95vw;
+
+/* .dropdown {
+  position: sticky;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: sticky;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0, 0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+} */
+
+#logo {
+  position: relative;
+  width: 99vw;
+  max-width: 500px;
+}
+
+#message1 {
+  width: 200px;
+  height: 100px;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+@media only screen and (min-width: 1000px) {
+  #message1:focus {
+    width: 33vw;
+    height: 40vh;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  #message1:focus {
+    width: 70vw;
+    height: 40vh;
+  }
 }
