--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,49 @@ body {
   background-color: black;
 }
 
+/* Dropdown Background */
+.dropdown-background {
+  width: auto;
+  height: 32px;
+  background-color: white;
+  z-index: -2;
+}
+
+/*Dropdown Button Style */
+.dropbtn {
+  background-color: #4caf50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* The container <div> - needed to postiiton the dropdown content*/
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Title */
 h1 {
   border-top-left-radius: 10%;
   border-top-right-radius: 10%;
@@ -20,31 +63,30 @@ h1 {
     rgb(0, 0, 0) 100%
   );
 }
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+
+/* Description */
 p {
   font-family: "Smooch Sans", sans-serif;
   font-size: 200%;
   color: white;
 }
 
-/* .dropdown {
-  position: sticky;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: sticky;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0, 0.2);
-  padding: 12px 16px;
-  z-index: 1;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-} */
-
+/* SVG placement */
 #Layer_1 {
   display: block;
   margin-top: 0%;
@@ -54,17 +96,7 @@ p {
   width: 100%;
 }
 
-/* @media only screen and (min-width: 1000px) {
-  #Layer_1 {
-    width: 33%;
-  }
-}
-@media only screen and (max-width: 1000px) {
-  #Layer_1 {
-    width: 100%;
-  } 
-}*/
-
+/* Message text area */
 #message1 {
   width: 200px;
   height: 100px;
