--- a/css/portfolio-style.css
+++ b/css/portfolio-style.css
@@ -1,14 +1,7 @@
-textarea {
-  resize: none;
-}
-
 body {
   background-color: black;
 }
 
-#input-form-div {
-  right: 50vw;
-}
 /* Dropdown Background */
 .dropdown-background {
   position: relative;
@@ -42,6 +35,7 @@ body {
 /* The container <div> - needed to postiiton the dropdown content*/
 .dropdown {
   z-index: 2;
+  /* right: 40vw; */
   bottom: 51px;
   position: relative;
   display: inline-block;
@@ -65,20 +59,6 @@ body {
   display: block;
 }
 
-/* Title */
-h1 {
-  text-align: center;
-  font-family: "Staatliches", cursive;
-  color: rgb(255, 255, 255);
-  background: rgb(2, 0, 36);
-  background: linear-gradient(
-    180deg,
-    rgb(255, 20, 20) 0%,
-    rgb(126, 0, 0) 35%,
-    rgb(0, 0, 0) 100%
-  );
-}
-
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
   background-color: #f1f1f1;
@@ -92,48 +72,4 @@ h1 {
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
   background-color: #9c9c9c;
-}
-
-/* Description */
-p {
-  text-align: center;
-  font-family: "Smooch Sans", sans-serif;
-  font-size: 200%;
-  color: white;
-}
-
-/* SVG placement */
-#Layer_1 {
-  text-align: center;
-  display: block;
-  padding: 0px;
-  margin: 0px;
-  width: 100%;
-}
-
-#input-form-div {
-  display: block;
-  text-align: center;
-}
-
-/* Message text area */
-#message1 {
-  margin: auto;
-  width: 200px;
-  height: 100px;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-}
-@media only screen and (min-width: 1000px) {
-  #message1:focus {
-    width: 33vw;
-    height: 40vh;
-  }
-}
-
-@media only screen and (max-width: 1000px) {
-  #message1:focus {
-    width: 70vw;
-    height: 40vh;
-  }
 }
