--- a/css/index.css
+++ b/css/index.css
@@ -89,6 +89,12 @@ h1 {
   background-color: #f1f1f1;
 }
 
+/* Dropdown link font */
+.dropdown-content a {
+  font-family: "Staatliches", cursive;
+  text-align: center;
+}
+
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: block;
