--- a/style/indexstyle.css
+++ b/style/indexstyle.css
@@ -1,3 +1,8 @@
+/* TO DO */
+/* Fix padding issue on all images - side scrollwheel appearing when it should not - FIXED: removed padding entriely and hidden scrollbars */
+/* Implement 3 slided menu showcasing work, make it adaptable to webm 1:1 video */
+/* Implement dynamic eye-catching background */
+
 * {
   margin: 0;
   padding: 0;
@@ -10,15 +15,27 @@
     'Arial Narrow',
     Arial,
     sans-serif;
-  
+  --secondaryfont: 'Gill Sans',
+    'Gill Sans MT',
+    Calibri,
+    'Trebuchet MS',
+    sans-serif;
 }
 
 body {
-  background-color: var(--secondary);
+  background-color: var(--secondary); 
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+p {
+  font-size: 1.2rem;
 }
 
 header {
-  display: block;
+  display: flex;
   height: 10vh;
   background-color: var(--primarycolor);
 }
@@ -30,7 +47,7 @@ article {
 }
 
 footer { 
-  display: block;
+  display: flex;
   height: 10vh;
   background-color: var(--primarycolor);
 }
@@ -47,16 +64,67 @@ footer {
   font-family: var(--primaryfont);
 }
 
-#logo {
-  height: 10vh;
+.secondaryfont {
+  font-family: var(--secondaryfont);
+}
+
+#logo, #face {
+  height: 8vh;
+  padding: 1vh;
 }
 
 .container {
   display: flex;
   /* background-color: aqua; */
   margin: auto;
+}
 
-  
+.canvas {
+  border-radius: 30px;
+  display: flex;
+  margin-top: 4vh;
+  margin-bottom: 4vh;
+  height: 72vh;
+  width: 100%;
+  background-color: rgba(34, 34, 34, 0.8)
+}
+
+.canvasleft {
+  border-radius: 30px;
+  display: inline-block;
+  align-content: center;
+  background-color: var(--secondarycolor);
+  overflow: scroll;
+  scrollbar-width: none;
+  height: 100%;
+  width: 50%;
+}
+
+.canvasright {
+  display: inline-block;
+  box-sizing: border-box;
+  align-content: center;
+  padding: 50px;
+  overflow: scroll;
+  scrollbar-width: none;
+  height: 100%;
+  width: 50%;
+}
+
+#video1 {
+  width: 100%;
+  height: 105%;
+}
+
+#buttons {
+    position: absolute;
+    padding: 0;
+    left: 0;
+    right: 0;
+    top: 86.5vh;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
 }
 
 .horizontal-center {
@@ -67,10 +135,30 @@ footer {
   justify-content: end;
 }
 
+/* image size guide */
+/* sizes calculated with assumed 10px padding on all sides (except for xs) */
+/* xs - width =  48%*/
+/* s - width =  250px*/
+/* m - width =  340px*/
+/* l - width =  460px*/
+/* xl - width =  550px*/
+/* xxl - width = 640px */
+
 /* xs */
 @media screen and (max-width: 576px) {
   .container{
     width: 100%;
+  }
+   
+  .projectimgsxs{
+    max-width: 100%;
+  }
+
+  .projectimgsxs {
+    display: inline-block;
+  }
+  .projectimgxxl, .projectimgxl, .projectimgl, .projectimgm {
+    display: none;
   }
 }
 
@@ -79,6 +167,19 @@ footer {
   .container {
       width: 540px;
     }
+    .projectimgsxs {
+    display: flex;
+    max-width: 250px;
+    max-height: 250px;
+    margin: auto;
+    }
+    .projectimgxxl,
+    .projectimgxl,
+    .projectimgl,
+    .projectimgm
+    {
+      display: none;
+    }
 }
 
 /* m */
@@ -86,6 +187,19 @@ footer {
   .container {
       width: 720px;
     }
+  .projectimgm {
+    display: flex;
+    max-width: 340px;
+    max-height: 340px;
+    margin: auto;
+  }
+  
+  .projectimgxxl,
+  .projectimgxl,
+  .projectimgl,
+  .projectimgsxs {
+    display: none;
+  }
 }
 
 /* l */
@@ -93,6 +207,19 @@ footer {
   .container {
       width: 960px;
     }
+    .projectimgl{
+    display: flex;
+    max-width: 460px;
+    max-height: 460px;
+    margin: auto;
+  }
+  
+  .projectimgxxl,
+  .projectimgxl,
+  .projectimgm,
+  .projectimgsxs {
+    display: none;
+  }
 }
 
 /* xl */
@@ -100,6 +227,20 @@ footer {
   .container {
       width: 1140px;
     }
+
+  .projectimgxl{
+    display: flex;
+    max-width: 550px;
+    max-height: 550px;
+    margin: auto;
+  }
+  
+  .projectimgxxl,
+  .projectimgl,
+  .projectimgm,
+  .projectimgsxs {
+    display: none;
+  }
 }
 
 /* xxl */
@@ -107,4 +248,18 @@ footer {
   .container {
       width: 1320px;
     }
+
+.projectimgxxl{
+    display: flex;
+    max-width: 640px;
+    max-height: 640px;
+    margin: auto;
+  }
+  
+  .projectimgxl,
+  .projectimgl,
+  .projectimgm,
+  .projectimgsxs {
+    display: none;
+  }
 }
